# dx_demo

./: .gitignore  .gitmodules  LICENSE  README.md
.github/: release-excluded
.github/workflows/: public-mirror.yml  public-release.yml
docs/plans/: 2026-06-01-yolo26-4ch-dxstream-redesign-design.md  2026-06-01-yolo26-4ch-dxstream-redesign.md
dx_yolo11seg_4ch_demo/: README-ko.md  README.md  requirements.txt  setup.sh
dx_yolo11seg_4ch_demo/assets/: videos
dx_yolo11seg_4ch_demo/demo/: main.py  workers.py
dx_yolo11seg_4ch_demo/demo/config/: yolov11_multich.yaml
dx_yolo11seg_4ch_demo/src/bindings/python/dx_postprocess/: pyproject.toml  seg_overlay.cpp
dx_yolo11seg_4ch_demo/src/utility/: common_util.cpp
dx_yolo26_4ch_demo/: README-ko.md  README.md  requirements.txt
dx_yolo26_4ch_demo/demo/: engine.py
dx_yolo26_4ch_demo/demo/config/: yolo26_multich.yaml
dx_yolo26_4ch_demo/scripts/: get_resource.sh
yolo11seg_4ch_demo/: README-ko.md  README.md  install.sh  requirements.txt  run_demo.sh  setup.sh  setup_sample_videos.sh
yolo11seg_4ch_demo/demo/: _gst_sample.py  engine.py  main.py  native_config.py  native_pipeline.py  perf_mode.py  workers.py
yolo11seg_4ch_demo/demo/config/: yolo11seg_multich.yaml  yolov11_multich.yaml
yolo11seg_4ch_demo/scripts/: setup_yolo11s-seg_model.sh  setup_yolo26seg_model.sh
yolo11seg_4ch_demo/src/bindings/python/dx_postprocess/: CMakeLists.txt  postprocess_pybinding.cpp  pyproject.toml  seg_overlay.cpp
yolo11seg_4ch_demo/src/postprocess/: CMakeLists.txt
yolo11seg_4ch_demo/src/postprocess/yolov11_seg/: CMakeLists.txt  yolov11_seg_postprocess.cpp  yolov11_seg_postprocess.h
yolo11seg_4ch_demo/src/postprocess/yolov8_seg/: CMakeLists.txt  yolov8_seg_postprocess.cpp  yolov8_seg_postprocess.h
yolo11seg_4ch_demo/src/utility/: common_util.hpp
yolo11seg_4ch_demo/tests/: test_gst_sample.py
yolo26_4ch_demo/: .gitignore  README-ko.md  README.md  install.sh  requirements.txt  run_demo.sh  setup.sh
yolo26_4ch_demo/demo/: _gst_sample.py  engine.py  gst_pipeline.py  main.py  native_config.py  native_pipeline.py  pydxs_bridge.py  stream_pipeline.py  workers.py
yolo26_4ch_demo/demo/config/: yolo26_multich.yaml
yolo26_4ch_demo/docs/plans/: 2026-06-02-vendored-dxstream-design.md
yolo26_4ch_demo/scripts/: build_vendored_dxstream.sh  diagnose_hw_decode.sh  diagnose_opencv_gst.py  ensure_gstreamer_opencv.sh  install_dxstream.sh  setup_yolo26_model.sh
yolo26_4ch_demo/tests/: test_engine_finalize.py  test_engine_preprocess.py  test_gst_pipeline.py  test_meta_adapter.py  test_native_config.py  test_native_pipeline.py  test_perf_mode.py  test_pydxs_bridge.py  test_stream_pipeline.py  test_video_widget.py  test_workers_hw_cache.py
yolo26seg_4ch_demo/: README-ko.md  README.md  requirements.txt  run_demo.sh  setup.sh
yolo26seg_4ch_demo/demo/: cpu_affinity.py  engine.py  gst_utils.py  main.py  meta_adapter.py  native_config.py  native_pipeline.py  native_signal.py  overlay.py  perf_mode.py  pydxs_bridge.py
yolo26seg_4ch_demo/demo/config/: yolo26seg_multich.yaml
yolo26seg_4ch_demo/scripts/: diagnose_hw_decode.sh  setup_sample_videos.sh  setup_yolo26seg_model.sh
yolo26seg_4ch_demo/tests/: test_cpu_affinity.py  test_main_native_wiring.py  test_native_pipeline.py  test_native_signal.py  test_overlay.py  test_pydxs_bridge.py
yolo_multi_demo/: CMakeLists.txt  README.md  build.sh  install.sh  run_demo.sh  setup.sh
yolo_multi_demo/build_x86_64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
yolo_multi_demo/cmake/: dxdemo.function.cmake
yolo_multi_demo/config/: ppu_yolo_multi_100channel_demo.json  ppu_yolo_multi_33channel_demo.json  ppu_yolo_multi_41channel_demo.json  ppu_yolo_multi_61channel_demo.json  ppu_yolo_multi_73channel_demo.json  ppu_yolo_multi_demo.json  yolo_multi_camera_test_10x10.json  yolo_multi_camera_test_6x6.json  yolo_multi_camera_test_8x8.json  yolo_multi_demo.json
yolo_multi_demo/include/: od.h
yolo_multi_demo/lib/common/: objects.hpp
yolo_multi_demo/lib/utils/: color_table.hpp  common_util.hpp  videostream.hpp
yolo_multi_demo/scripts/: get_resource.sh  setup_sample_models.sh  setup_sample_videos.sh
yolo_multi_demo/src/: od.cpp  yolo_multi_channels.cpp
yolo_multi_demo/src/demo_utils/: display.cpp  image.cpp  nms.cpp  yolo.cpp  yolo_cfg.cpp
yolo_multi_demo/src/demo_utils/include/: bbox.h  yolo.h
